Add hero section with travel banner and CTA button

--- a/index.html
+++ b/index.html
@@ -41,9 +41,21 @@
                 <li> <a class="text-blue-400" href=" ">Contact</a></li>
             </ul>
             </div>
-        </div>
+     </div>
+   <!-- navbar section end here -->
 
-        <!-- navbar section end here -->
+   <div class="hero w-11/12 mx-auto bg-[url('assets/banner.png')] h-[600px]  bg-cover bg-center rounded-xl">
+        <div class="hero-overlay bg-opacity-60 "></div>
+        <div class="hero-content text-neutral-content text-center">
+            <div class="max-w-md">
+                <h1 class="mb-5 text-5xl font-bold text-white">Explore Your Travel</h1>
+                <p class="mb-5">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis  phasellus.</p>
+                <button class="bg-orange-400 text-white px-6 py-2 rounded-lg hover:bg-red-500 transition">Find Now</button>
+            </div>
+        </div>
+    </div>
+
+
     
 </body>
 </html>
