Add  Choose Your Destination section with  cards

--- a/index.html
+++ b/index.html
@@ -78,9 +78,62 @@
         </div>
         <!-- right side -->
          <div><img src="assets/Rectangle 4.png" class="mx-auto" alt=""></div>
-
-      </div>
+     </div>
      <!-- Our Popular Tours  end here -->
+
+  
+
+  
+      <section class="w-11/12 mx-auto py-12 text-center">
+    <!-- Heading -->
+    <h1 class="text-2xl lg:text-5xl font-bold text-gray-900 mb-4">Choose Your Destination</h1>
+    <!-- Subtext -->
+    <p class="text-sm lg:text-lg text-gray-600 max-w-xl mx-auto mb-2">
+      Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
+    </p>
+    
+
+    <!-- Destination Grid -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-5">
+      <!-- Destination Card -->
+      <div class="relative rounded-xl ">
+        <img src="assets/Rectangle 5.png" alt="" class="w-full object-cover" />
+        <h2 class="absolute  text-white text-xl font-semibold ">Maldives</h2>
+      </div>
+
+      <div class="relative rounded-xl border border-black ">
+        <img src="assets/Rectangle 8.png" alt="" class="w-full  object-cover" />
+        <h2 class="absolute  text-xl font-semibold text-black ">Indonesia</h2>
+      </div>
+
+      <div class="relative rounded-xl ">
+        <img src="assets/Rectangle 6.png" alt="" class="w-full   object-cover" />
+        <h2 class="absolute  text-white text-xl font-semibold ">Srilanka</h2>
+      </div>
+
+      <div class="relative rounded-xl">
+        <img src="assets/Rectangle 7.png" alt="" class="w-full  object-cover" />
+        <h2 class="absolute  text-white text-xl font-semibold ">North America</h2>
+      </div>
+
+      <div class="relative rounded-xl ">
+        <img src="assets/Rectangle 9.png" alt="" class="w-full  object-cover" />
+        <h2 class="absolute text-white text-xl font-semibold">Kashmir</h2>
+      </div>
+
+      <div class="relative rounded-xl ">
+        <img src="assets/Rectangle 11.png" alt="" class="w-full  object-cover" />
+        <h2 class="absolute   text-white text-xl font-semibold ">India</h2>
+      </div>
+
+      <div class="relative rounded-xl">
+        <img src="assets/Rectangle 10.png" alt="" class="w-full  object-cover" />
+        <h2 class="absolute   text-white text-xl font-semibold ">Bandarban</h2>
+      </div>
+    </div>
+      </section>
+
+
 
     
 </body>
