Add 'Why Choose Us' section with three  cards

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
     rel="stylesheet">
 
+
+        
+
   <style>
-    h1,
+    h1,h3,
     li {
       font-family: "Mulish", sans-serif;
     }
@@ -91,7 +94,7 @@
   <!-- Our Popular Tours  end here -->
 
 
-
+  <!-- photo card section start -->
 
   <section class="w-11/12 mx-auto py-12 text-center">
     <!-- Heading -->
@@ -166,6 +169,60 @@
 
     </div>
   </section>
+
+  <!-- photo card section end -->
+
+  <!-- Why Choose Us section start here -->
+   <div class="w-11/12 mx-auto py-11">
+    <h1 class="text-xl lg:text-5xl font-bold text-center ">Why Choose Us section</h1>
+    <p class=" text-lg lg:text-sm text-center pt-4 mb-8">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+
+    <!-- cards section -->
+    <div class="w-11/12 mx-auto   ">
+
+<div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
+
+
+        <!-- first card -->
+      <div class=" border-2 border-yellow-400 bg-yellow-100 rounded-xl space-y-4 p-3" >
+        <div><img src="assets/icons8-hotel-64.png" alt=""></div>
+        <div>
+          <h3 class="font-bold text-lg lg:text-2xl">Handpicked Hotels</h3>
+          <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+        </div>
+      </div>
+      <!-- second card -->
+      <div class=" border-2 border-sky-500 bg-sky-100 rounded-xl space-y-4 p-3" >
+        <div><img src="assets/icons8-map-94.png" alt=""></div>
+        <div>
+          <h3 class="font-bold text-lg lg:text-2xl">World Class Service</h3>
+          <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.  </p>
+        </div>
+      </div>
+
+</div>
+
+<div class=" grid grid-cols-1 mt-8 w-[50%] mx-auto ">
+  <!-- third card -->
+      <div class=" border-2 border-pink-500 bg-pink-100 rounded-xl space-y-4 p-3" >
+        <div><img src="assets/icons8-discount-80.png" alt=""></div>
+        <div>
+          <h3 class="font-bold text-lg lg:text-2xl">Best Price Guarantee</h3>
+          <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+        </div>
+      </div>
+</div>
+
+
+
+
+
+    </div>
+
+
+   </div>
+  <!-- Why Choose Us section end here -->
+
 
 
 
