--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     </div>
     <!-- right side -->
-    <div><img src="assets/Rectangle 4.png" class="mx-auto" alt=""></div>
+    <div><img src="assets/Rectangle 4.png" class="mx-auto w-[550px]" alt=""></div>
   </div>
   <!-- Our Popular Tours  end here -->
 
@@ -320,6 +320,26 @@
    </div>
   <!-- Deals & Discounts start here -->
 
+  <!-- A Simple Perfect Place To Get Lost start here -->
+   <div class="w-11/12 mx-auto grid grid-cols-1 lg:grid-cols-2 py-12 gap-5">
+
+    <div class="space-y-6">
+      <h1 class="text-xl lg:text-5xl font-bold text-center ">A Simple Perfect Place To Get Lost</h1>
+      <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+      <p class="font-bold text-sm lg:text-lg">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</p>
+      <p class="font-bold text-sm lg:text-lg">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</p>
+       <button class="bg-orange-500 text-white px-5 py-2 rounded-lg font-medium hover:bg-orange-600 transition">Some More</button>
+    </div>
+
+    <div>
+     <video width="750px" height="550px" controls autoplay loop mute>
+        <source src="assets/mountain.mp4" type="video/mp4"> 
+         </video>
+    </div>
+
+   </div>
+  <!-- A Simple Perfect Place To Get Lost start here -->
+
 
     <!-- input section start here -->
 
@@ -402,7 +422,7 @@
    <p class="text-white">  Made with <span class="text-red-500">❤️</span> by <span class="font-semibold"> Rimpa Kasundi </span><span class="italic">The Travel Juno</span><br>
     &copy; 2025 The Travel Juno. All rights reserved.</p>
   </aside>
-</footer>
+     </footer>
 
      
 
