card's issue recovered

--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
 
       <!-- 1 st section -->
       <div class="grid grid-cols-1  lg:grid-cols-2 gap-5">
-        <div class="relative rounded-xl ">
+        <div class="relative flex justify-center items-center rounded-xl ">
           <img src="assets/Rectangle 5.png" alt="" class="w-full object-cover" />
-          <h2 class="absolute  text-white text-xl font-semibold ">Maldives</h2>
+          <h2 class="absolute  text-white lg:text-2xl text-xl font-semibold   top-1/2">Maldives</h2>
         </div>
 
-        <div class="relative rounded-xl  ">
+        <div class="relative flex justify-center items-center rounded-xl  ">
           <img src="assets/Rectangle 8.png" alt="" class="w-full  object-cover" />
-          <h2 class="absolute  text-xl font-semibold text-white  ">Indonesia</h2>
+          <h2 class="absolute lg:text-2xl  text-xl font-semibold text-white  top-1/2 ">Indonesia</h2>
         </div>
 
 
@@ -129,19 +129,19 @@
       <!-- 2nd secton -->
       <div class="grid grid-cols-1  lg:grid-cols-3 gap-5 pt-5">
 
-        <div class="relative rounded-xl">
+        <div class="relative  flex justify-center items-center  rounded-xl">
           <img src="assets/Rectangle 6.png" alt="" class="w-full h-[350px] rounded-xl  object-cover" />
-          <h2 class="absolute  text-white text-xl font-semibold ">Srilanka</h2>
+          <h2 class="absolute  text-white text-xl font-semibold  top-1/2 ">Srilanka</h2>
         </div>
 
-        <div class="relative rounded-xl">
+        <div class="relative flex justify-center items-center rounded-xl">
           <img src="assets/Rectangle 7.png" alt="" class="w-full  h-[350px] rounded-xl object-cover" />
-          <h2 class="absolute  text-white text-xl font-semibold ">North America</h2>
+          <h2 class="absolute  text-white text-xl font-semibold  top-1/2 ">North America</h2>
         </div>
 
-        <div class="relative rounded-xl ">
+        <div class="relative flex justify-center items-center rounded-xl ">
           <img src="assets/Rectangle 9.png" alt="" class="w-full   h-[350px] rounded-xl object-cover" />
-          <h2 class="absolute text-white text-xl font-semibold">Kashmir</h2>
+          <h2 class="absolute text-white text-xl font-semibold  top-1/2">Kashmir</h2>
         </div>
 
 
@@ -152,14 +152,14 @@
 
       <div class="grid grid-cols-1  lg:grid-cols-2 gap-5 pt-5">
 
-        <div class="relative rounded-xl ">
+        <div class="relative flex justify-center items-center rounded-xl ">
           <img src="assets/Rectangle 11.png" alt="" class="w-full  h-[350px] rounded-xl object-cover" />
-          <h2 class="absolute   text-white text-xl font-semibold ">India</h2>
+          <h2 class="absolute   text-white text-xl font-semibold  top-1/2 ">India</h2>
         </div>
 
-        <div class="relative rounded-xl">
+        <div class="relative flex justify-center items-center rounded-xl">
           <img src="assets/Rectangle 10.png" alt="" class="w-[6901px] rounded-xl object-cover" />
-          <h2 class="absolute   text-white text-xl font-semibold ">Bandarban</h2>
+          <h2 class="absolute   text-white text-xl font-semibold  top-1/2 ">Sundarban</h2>
         </div>
 
 
