Update destination grid layout

--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
       <div class="grid grid-cols-1  lg:grid-cols-2 gap-5">
         <div class="relative flex justify-center items-center rounded-xl ">
           <img src="assets/Rectangle 5.png" alt="" class="w-full object-cover" />
-          <h2 class="absolute  text-white lg:text-2xl text-xl font-semibold   top-1/2">Maldives</h2>
+          <h2 class="absolute  text-white lg:text-5xl text-xl font-semibold   top-1/2">Maldives</h2>
         </div>
 
         <div class="relative flex justify-center items-center rounded-xl  ">
           <img src="assets/Rectangle 8.png" alt="" class="w-full  object-cover" />
-          <h2 class="absolute lg:text-2xl  text-xl font-semibold text-white  top-1/2 ">Indonesia</h2>
+          <h2 class="absolute   lg:text-5xl text-xl font-semibold text-white  top-1/2 ">Indonesia</h2>
         </div>
 
 
@@ -131,17 +131,17 @@
 
         <div class="relative  flex justify-center items-center  rounded-xl">
           <img src="assets/Rectangle 6.png" alt="" class="w-full h-[350px] rounded-xl  object-cover" />
-          <h2 class="absolute  text-white text-xl font-semibold  top-1/2 ">Srilanka</h2>
+          <h2 class="absolute  text-white lg:text-5xl text-xl font-semibold  top-1/2 ">Srilanka</h2>
         </div>
 
         <div class="relative flex justify-center items-center rounded-xl">
           <img src="assets/Rectangle 7.png" alt="" class="w-full  h-[350px] rounded-xl object-cover" />
-          <h2 class="absolute  text-white text-xl font-semibold  top-1/2 ">North America</h2>
+          <h2 class="absolute  text-white lg:text-5xl text-xl font-semibold  top-1/2 ">North America</h2>
         </div>
 
         <div class="relative flex justify-center items-center rounded-xl ">
           <img src="assets/Rectangle 9.png" alt="" class="w-full   h-[350px] rounded-xl object-cover" />
-          <h2 class="absolute text-white text-xl font-semibold  top-1/2">Kashmir</h2>
+          <h2 class="absolute text-white lg:text-5xl text-xl font-semibold  top-1/2">Kashmir</h2>
         </div>
         
        </div>
@@ -152,12 +152,12 @@
 
         <div class="relative flex justify-center items-center rounded-xl ">
           <img src="assets/Rectangle 11.png" alt="" class="w-full  h-[350px] rounded-xl object-cover" />
-          <h2 class="absolute   text-white text-xl font-semibold  top-1/2 ">India</h2>
+          <h2 class="absolute   text-white lg:text-5xl text-xl font-semibold  top-1/2 ">India</h2>
         </div>
 
         <div class="relative flex justify-center items-center rounded-xl">
           <img src="assets/Rectangle 10.png" alt="" class="w-[6901px] rounded-xl object-cover" />
-          <h2 class="absolute   text-white text-xl font-semibold  top-1/2 ">Sundarban</h2>
+          <h2 class="absolute   text-white lg:text-5xl text-xl font-semibold  top-1/2 ">Sundarban</h2>
         </div>
 
 
